fix(modal): Allow overflow on mobile

--- a/packages/core/src/components/atoms/backdrop/backdrop.component.scss
+++ b/packages/core/src/components/atoms/backdrop/backdrop.component.scss
@@ -8,7 +8,7 @@
 
 	.content-container {
 		@apply h-full w-full overflow-y-auto overflow-x-hidden;
-		@apply tablet:px-16 desktop-xs:p-16;
+		@apply pt-16 tablet:px-16 desktop-xs:p-16;
 		@apply flex items-end justify-center desktop-xs:items-stretch;
 		@apply max-h-screen max-w-screen;
 	}
